# vct_matches_notifications

./: .dockerignore  .gitignore  Dockerfile.bot  Dockerfile.crawler  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: api_processor.py  init_db_rabbit.py  main.py  scheduler.py
docker/: entrypoint.sh  entrypoint_app.sh  entrypoint_bot.sh  entrypoint_main.sh
docker/app/: Dockerfile.app
docker/bot/: Dockerfile.bot
docker/main/: Dockerfile.main
rabbit/: consumer.py  producer.py  user_consumer.py
repository/: config.py  database.py  init_db.py  models.py  repository.py
src/: api_processor.py  crawler.py  domains.py  init_data.py  init_db.py  init_db_rabbit.py  main.py  scheduler.py
src/app/: main.py
src/app/services/: notifications.py  scheduler.py  vlr.py
src/bot/: dependencies.py  handlers.py  keyboards.py  main.py
src/common/db/: connect.py  models.py  repositories.py
src/common/rabbit/: producer.py  user_consumer.py
src/common/repository/: config.py  database.py  models.py  repository.py
src/db/: connect.py  models.py  repositories.py
src/services/: notifications.py  scheduler.py
src/services/scheduler/: service.py
src/services/vlr_client/: api_processor.py
tests/: test_matches_checker.py
tg_bot/: dependencies.py  handlers.py  keyboards.py  main.py  misc.py
