[project]
name = "match-notifications"
version = "0.1.0"
description = ""
authors = [
    {name = "dilozy",email = "denfil228@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "apscheduler (>=3.11.1,<4.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg[binary] (>=3.2.12,<4.0.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.9.0,<3.13)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



